# KORE

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  RELEASE_NOTES_v0.1.0.md  justfile  pyproject.toml
.github/workflows/: ci.yml  coverage.yml  docs.yml  release.yml
benches/: matmul_bench.rs
crates/kore-attention/: Cargo.toml
crates/kore-attention/src/: flash.rs  kv_cache.rs  lib.rs  mask.rs  scaled_dot.rs
crates/kore-autograd/: Cargo.toml
crates/kore-autograd/src/: backward.rs  checkpoint.rs  grad_fn.rs  graph.rs  lib.rs  scope.rs
crates/kore-btes/: Cargo.toml
crates/kore-btes/src/: encoder.rs  lib.rs  memory.rs  packing.rs  quantize.rs  vtalu.rs
crates/kore-cli/: Cargo.toml
crates/kore-cli/examples/: bitnet_bench.rs
crates/kore-cli/src/: main.rs
crates/kore-clifford/: Cargo.toml
crates/kore-clifford/src/: algebra.rs  lib.rs  multivector.rs  ops.rs  products.rs  tensor_bridge.rs
crates/kore-core/: Cargo.toml
crates/kore-core/src/: autograd.rs  device.rs  dtype.rs  error.rs  lib.rs  ops.rs  prelude.rs  shape.rs  storage.rs  tensor.rs
crates/kore-core/src/ops/: arithmetic.rs  comparison.rs  cuda_ops.rs  manipulation.rs  reduction.rs
crates/kore-core/src/ops/cuda_kernels/: elementwise.cu  matmul.cu  reduce.cu
crates/kore-core/tests/: cuda_tests.rs
crates/kore-data/: Cargo.toml
crates/kore-data/src/: batcher.rs  dataloader.rs  dataset.rs  lib.rs  multipack.rs
crates/kore-edge/: Cargo.toml  Cross.toml  Makefile.toml  README.md
crates/kore-edge/examples/: bench_edge.rs
crates/kore-edge/examples/android/: KoreEdge.kt
crates/kore-edge/examples/ios/: KoreEdge.swift
crates/kore-edge/examples/wasm-node/: main.js
crates/kore-edge/examples/wasm-web/: index.html
crates/kore-edge/src/: arena.rs  ffi.rs  format.rs  lib.rs  loader.rs  neon.rs  plan.rs  runtime.rs  simd_dispatch.rs  wasm_api.rs  wasm_simd.rs
crates/kore-edge/src/ops/: activation.rs  attention.rs  elementwise.rs  embedding.rs  matmul.rs  mod.rs  norm.rs  rope.rs
crates/kore-kernels/: Cargo.toml
crates/kore-kernels/src/: cpu_fused.rs  cpu_fused_backward.rs  cpu_matmul.rs  cpu_quat_matmul.rs  cpu_ternary_matmul.rs  lib.rs  simd.rs
crates/kore-kernels/src/cuda/: context.rs  launch.rs  memory.rs  mod.rs  ops.rs
crates/kore-kernels/src/cuda/kernels/: dequant_matmul.cu  elementwise.cu  fused_norm_proj.cu  mamba_scan.cu  mamba_scan_backward.cu  matmul.cu  reduce.cu  rms_norm.cu  rope.cu  softmax.cu
crates/kore-kernels/src/rocm/: context.rs  ffi.rs  launch.rs  memory.rs  mod.rs  ops.rs
crates/kore-mamba/: Cargo.toml
crates/kore-mamba/src/: causal_conv1d.rs  dplr.rs  hippo.rs  lib.rs  mamba.rs  mamba3.rs  mixer.rs  model.rs  norm.rs  selective_scan.rs  ssd.rs  ssd3.rs
crates/kore-mamba/src/autograd/: mod.rs  scan_backward.rs  scan_forward_saved.rs  tests.rs
crates/kore-nn/: Cargo.toml
crates/kore-nn/src/: activations.rs  bit_linear.rs  conv.rs  dropout.rs  embedding.rs  geometric.rs  layer_norm.rs  lib.rs  linear.rs  lora.rs  loss.rs  module.rs  module_list.rs  pool.rs  prelude.rs  quat_linear.rs  rms_norm.rs  sampler.rs  sequential.rs  serialization.rs  squeezenet.rs  trainer.rs
crates/kore-optim/: Cargo.toml
crates/kore-optim/src/: adam.rs  clip.rs  lib.rs  scheduler.rs  sgd.rs
crates/kore-python/: Cargo.toml
crates/kore-python/src/: lib.rs
crates/kore-serve/: Cargo.toml
crates/kore-serve/src/: api.rs  health.rs  lib.rs  server.rs  state.rs
crates/kore-serve/src/layered/: cache.rs  config.rs  engine.rs  mod.rs  prefetcher.rs  sharder.rs
crates/kore-transformer/: Cargo.toml
crates/kore-transformer/src/: bitnet.rs  block.rs  embedding.rs  feed_forward.rs  lib.rs  loader.rs  mha.rs  model.rs  quatnet.rs  rms_norm.rs  rope.rs  tokenizer.rs
crates/kore-vljepa/: Cargo.toml
crates/kore-vljepa/examples/: mamba3_agent.rs  mamba3_jepa_train.rs
crates/kore-vljepa/src/: agent.rs  config.rs  lib.rs  predictor.rs  recursion.rs  selective_decode.rs  tools.rs  vljepa.rs  y_decoder.rs  y_encoder.rs
crates/kore-vulkan/: Cargo.toml
crates/kore-vulkan/benches/: matmul_benchmark.rs
crates/kore-vulkan/src/: backend.rs  buffer.rs  error.rs  lib.rs  ops.rs
examples/: README.md  basic_tensor_ops.rs  colab_quickstart.ipynb  mamba3_jepa_training.ipynb  quantized_ops.rs  vulkan_matmul.rs
python/kore/: __init__.py  kore.pyi
training/models/: angn.py  mamba3.py  predictor.py  vljepa.py
training/scripts/: train_decoder.py  train_jepa.py
training/utils/: diagnostics.py
