[workspace]
members = [
    "crates/kore-core",
    "crates/kore-autograd",
    "crates/kore-nn",
    "crates/kore-optim",
    "crates/kore-btes",
    "crates/kore-kernels",
    "crates/kore-clifford",
    "crates/kore-attention",
    "crates/kore-serve",
    "crates/kore-python",
    "crates/kore-cli",
    "crates/kore-transformer",
    "crates/kore-edge",
    "crates/kore-data",
    "crates/kore-mamba",
    "crates/kore-vljepa",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ikaros Digital LLC"]
license = "Apache-2.0"

[workspace.dependencies]
# Math & Tensors
num-traits = "0.2"
num-complex = "0.4"
half = "2.3"
rustfft = "6.2"
smallvec = "1.11"
bytemuck = { version = "1.14", features = ["derive"] }

# CUDA
cudarc = { version = "0.12", features = ["cuda-12000"] }

# Random
rand = "0.8"

# Parallelism
rayon = "1.8"
crossbeam = "0.8"
parking_lot = "0.12"

# Python
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"

# Serialization
safetensors = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tokenizer
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }

# Serving
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3"
tower-http = { version = "0.5", features = ["cors"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Inter-crate
kore-core = { path = "crates/kore-core" }
kore-autograd = { path = "crates/kore-autograd" }
kore-nn = { path = "crates/kore-nn" }
kore-optim = { path = "crates/kore-optim" }
kore-btes = { path = "crates/kore-btes" }
kore-kernels = { path = "crates/kore-kernels" }
kore-clifford = { path = "crates/kore-clifford" }
kore-attention = { path = "crates/kore-attention" }
kore-transformer = { path = "crates/kore-transformer" }
kore-serve = { path = "crates/kore-serve" }
kore-edge = { path = "crates/kore-edge" }
kore-mamba = { path = "crates/kore-mamba" }
kore-vljepa = { path = "crates/kore-vljepa" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
lto = "thin"
