[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "kore"
version = "0.2.0"
description = "A pure Rust ML engine with Python bindings — tensors, autograd, quantization, and more"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Ikaros Digital LLC" }]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.20"]

[project.urls]
Repository = "https://github.com/KidIkaros/KORE"

[tool.maturin]
manifest-path = "crates/kore-python/Cargo.toml"
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "kore"
