[package]
name = "kore-btes"
description = "Binary/Ternary/Quaternary encoding and compute for Kore"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
kore-core.workspace = true
rayon.workspace = true
bytemuck.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest = "1.4"
