[package]
name = "kore-cli"
description = "Command-line interface for Kore"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "kore"
path = "src/main.rs"

[dependencies]
kore-core.workspace = true
kore-nn.workspace = true
kore-kernels.workspace = true
kore-attention.workspace = true
kore-autograd.workspace = true
kore-btes.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
