[package]
name = "kore-kernels"
description = "CUDA and CPU SIMD kernels for Kore"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
kore-core.workspace = true
kore-btes.workspace = true
rayon.workspace = true
thiserror.workspace = true
parking_lot.workspace = true

[features]
default = []
cuda = ["dep:cudarc", "kore-core/cuda"]

[dependencies.cudarc]
workspace = true
optional = true
