[package]
name = "kore-mamba"
description = "Mamba SSM (Selective State Space Model) architecture for Kore"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
kore-core.workspace = true
kore-autograd.workspace = true
kore-nn.workspace = true
kore-kernels.workspace = true
kore-transformer.workspace = true
kore-attention.workspace = true
safetensors.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
half.workspace = true
num-complex.workspace = true
rustfft.workspace = true

[dependencies.cudarc]
workspace = true
optional = true

[features]
default = []
cuda = ["dep:cudarc", "kore-kernels/cuda", "kore-core/cuda"]
rocm = ["kore-kernels/rocm"]
