[package]
name = "kore-nn"
description = "Neural network layers and modules for Kore"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
kore-core.workspace = true
kore-autograd.workspace = true
kore-btes.workspace = true
kore-kernels.workspace = true
kore-clifford.workspace = true
kore-optim.workspace = true
kore-data.workspace = true
thiserror.workspace = true
rand.workspace = true
safetensors.workspace = true
half.workspace = true

[dependencies.cudarc]
workspace = true
optional = true

[features]
default = []
cuda = ["dep:cudarc", "kore-kernels/cuda", "kore-core/cuda"]
