[package]
name = "kore-vulkan"
description = "Vulkan compute backend for KORE using vulkan-kernels"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
kore-core.workspace = true
kore-kernels.workspace = true
vulkan-kernels = { path = "../../../vulkan-kernels" }

ash = { version = "0.38", optional = true }
thiserror.workspace = true
parking_lot.workspace = true
tracing.workspace = true

[features]
default = ["ash"]
ash = ["dep:ash", "vulkan-kernels/ash"]
